Style chat popups

--- a/sass/themes/engine/_popups.sass
+++ b/sass/themes/engine/_popups.sass
@@ -19,3 +19,10 @@
 	border-top-color: $bg-light-2
 .outer.tipsy-arrow-w
 	border-right-color: $bg-light-2
+
+.speech-bubble
+	@extend .ts-content-dim
+	@extend .ts-no-shadow
+	border-color: $bg-light-2
+.speech-bubble:after
+	@extend .ts-hidden
