Fix filter glitching pm options

--- a/sass/themes/engine/_private.sass
+++ b/sass/themes/engine/_private.sass
@@ -7,7 +7,7 @@
 	box-sizing: border-box
 .pmGreyTop:hover,
 .pmGreyTop.hover
-	@extend .ts-brighten
+	background: $bg-light-3
 
 #privateChatIcon
 	border: 1px solid $bg-dark-2
