Attempt to stabilize new-modal height

--- a/sass/themes/engine/_modals.sass
+++ b/sass/themes/engine/_modals.sass
@@ -76,6 +76,7 @@
 		@extend .ts-main-filter
 	.content
 		@extend .ts-content
+		max-height: 450px !important
 	.header
 		@extend .ts-no-shadow
 		color: $c-text
