Subdue Patron Styling

--- a/sass/global/_body.sass
+++ b/sass/global/_body.sass
@@ -46,8 +46,8 @@
 	font-size: 11px
 	@extend .ts-faded
 
-.chat .message.patron
-	box-shadow: inset 5px 0 0 gold
+.chat .message.patron .speaker
+	color: gold
 .chat .message.patron:hover
 	@extend .ts-brighten
 .chat .message.patron .speaker:after
