--- a/sass/themes/engine/_chat.sass
+++ b/sass/themes/engine/_chat.sass
@@ -4,6 +4,7 @@
 .chat .message.stat .subject:hover,
 .chat .message.stat .speaker:hover
 	color: $c-text
+.chat .message.patron .speaker,
 .chat .message .subject:hover,
 .chat .message .speaker:hover
 	@extend .ts-co-main
