--- a/sass/global/_body.sass
+++ b/sass/global/_body.sass
@@ -21,7 +21,7 @@
   vertical-align: top !important
   display: inline-block !important
 
-.profile .section.statslink
+.profile .section.ts-stats
 	text-align: center !important
 
 // remove nib on dj buttons
