--- a/sass/themes/engine/_chat.sass
+++ b/sass/themes/engine/_chat.sass
@@ -58,10 +58,10 @@
 	.chatsound-container
 		@extend .ts-hidden
 
-#tsGuess
+#tsHints
 	@extend .ts-content-dim
 	border-left: 2px solid $bg-light-1
 	border-right: 2px solid $bg-light-1
 	
-#tsGuess .icon:hover
+#tsHints .icon:hover
 	background: $bg-light-1
