--- a/sass/themes/engine/_header.sass
+++ b/sass/themes/engine/_header.sass
@@ -86,7 +86,7 @@ div#header,
 	.queue-icon
 		@include sprite(40px, -160px)
 
-#tsVolWrap
+#tsVolume
 	right: 80px
 	#tsVolSlide
 		@extend .ts-bg-main
