Style drag handle

--- a/sass/colors/engine/_extends.sass
+++ b/sass/colors/engine/_extends.sass
@@ -5,7 +5,7 @@ $ts-co-main: ".ts-co-main, .tabbed-panel a, .tabbed-panel a:hover, .tabbed-panel
 
 $ts-co-ta: "#tsPanels article.ts-help:before, #tsPanels .ts-tab.active, .ts-toggle input:checked + span:after, #tsPanels #tsGold"
 
-$ts-bg-main: ".ts-bg-main, #tsVolume #tsVolSlide, .new-modal .footer .carousel-indicators li:hover, .new-modal .footer .carousel-indicators li.active"
+$ts-bg-main: ".ts-bg-main, #tsVolume #tsVolSlide, .new-modal .footer .carousel-indicators li:hover, .new-modal .footer .carousel-indicators li.active, #tsDrag:hover"
 
 $ts-bg-curr: ".ts-bg-curr, #maindiv .floating-menu .split-option .option.selected, ul#ding-menu.floating-menu .split-option .option.selected, #settings.settings-dropdown .dropdown .split-option .option.selected, #maindiv .floating-menu .option.active, #maindiv .floating-menu .option.selected, ul#ding-menu.floating-menu li.option.active, ul#ding-menu.floating-menu li.option.selected, #settings.settings-dropdown .dropdown .option a.active, #settings.settings-dropdown .dropdown .option a.selected, #settings.settings-dropdown .dropdown .split-option.active, #settings.settings-dropdown .dropdown .split-option.selected, #maindiv .song-list .song .progress, #queue.batch li.song.selected, .chat .message.mention"
 
