--- a/sass/themes/engine/_chat.sass
+++ b/sass/themes/engine/_chat.sass
@@ -58,6 +58,11 @@
 	.chatsound-container
 		@extend .ts-hidden
 
+body #tsDrag
+	background: $bg-active
+	&:hover
+		background: $accent
+
 #tsHints
 	@extend .ts-content-dim
 	border-left: 2px solid $bg-light-1
