--- a/sass/themes/engine/_chat.sass
+++ b/sass/themes/engine/_chat.sass
@@ -59,9 +59,9 @@
 		@extend .ts-hidden
 
 body #tsDrag
-	background: $bg-active
+	color: $bg-active
 	&:hover
-		background: $accent
+		color: $accent
 
 #tsHints
 	@extend .ts-content-dim
